--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port = 8085
+server.port = 8082
 
-#twilio
-#trial-number : +14242503284
-#account-sid : AC98d261a0ad459fd7a2328b870033cd83
-#auth-token : cde3612cac619779939f3998ae92f5a0
+#twilio setting
+twilio.trial-number : +14242503284
+twilio.account-sid : AC98d261a0ad459fd7a2328b870033cd83
+twilio.auth-token : 78777c4c691cf53ca7d736af89fead89
